# foris-controller-sentinel-module

./: .gitignore  CHANGELOG.md  CHANGELOG.rst  README.rst  pyproject.toml  setup.cfg  setup.py
foris_controller_backends/sentinel/: __init__.py
foris_controller_modules/sentinel/: __init__.py
foris_controller_modules/sentinel/handlers/: __init__.py  mock.py  openwrt.py
foris_controller_modules/sentinel/schema/: sentinel.json
foris_controller_sentinel_module/: __init__.py  guide.py
tests/: conftest.py  test_sentinel.py
tests/test_root/usr/share/sentinel-eula/: EULAs.csv
